--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,6 +1,5 @@
 .Nav {
   width: 100%;
-  
   .benerImg {
     width: 100%;
   }
@@ -81,5 +80,41 @@
       font-size: 16px;
       font-weight: 700;
     }
+  }
+  .shoppingContainerBox{
+    // display:none;
+    .noneBox1{
+      display: flex;
+      width: 1300px;
+      margin:0 246px 0 246px;
+      // border: 5px solid blue;
+      justify-content: center;
+      .shoppingContainer{
+        display:flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width:12.5%;
+        padding-left:20px;
+        border-left:0.5px solid #eeeeee;
+        // border-right:0.5px solid #eeeeee;
+        .mainTitle{
+          padding-top:20px;
+          line-height: 50px;
+          color:#000;
+          font-size: 16px;
+          font-weight: bold;
+        }
+        .content{
+        width: 100%;
+        display: block;
+        padding: 4.4px 0;
+        line-height: 1.4em;
+        color: #737373;
+        font-size: 16px;
+        }
+      }
+    }
+    
   }
 }
