[Nav] 1. Nav바 호버 기능 구현 및 scss 일부 적용완료 2. 기능구현이 우선이라 판단하여, 다른 컴포넌트에서 작업 후 추후에 마무리 작업예정

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,4 +1,5 @@
 .Nav {
+  position: relative;
   width: 100%;
   .benerImg {
     width: 100%;
@@ -82,12 +83,10 @@
     }
   }
   .shoppingContainerBox{
-    // display:none;
     .noneBox1{
       display: flex;
       width: 1300px;
       margin:0 246px 0 246px;
-      // border: 5px solid blue;
       justify-content: center;
       .shoppingContainer{
         display:flex;
@@ -97,7 +96,6 @@
         width:12.5%;
         padding-left:20px;
         border-left:0.5px solid #eeeeee;
-        // border-right:0.5px solid #eeeeee;
         .mainTitle{
           padding-top:20px;
           line-height: 50px;
