--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -2,30 +2,36 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width : 100%;
-
-  .SignUpTitle {
-    padding : 30px 0;
-  }
-
-  .nowState{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    border-top : 1px solid black;
-    border-bottom : 1px solid black;
-
-    div{
-      padding : 20px 40px;
-    }
-  }
-
   form{
+    margin-top: 40px;
+
+    label{
+      input[type="checkbox"]{
+        margin : 10px 10px;
+        width : 20px;
+        height: 20px;
+      }
+    }
+
     .checkboxForm{
       display: flex;
       flex-direction: column; 
-      border: 1px solid#e1e1e1;
-      padding: 15px 15px;
     }
   }
+
+  .boundaryLine{
+    margin: 10px 0;
+    border-bottom: 1px solid black;
+  }
+
+  .SignUpInfoBtn , .cancelInfoBtn {
+    height: 40px;
+    width: 45%;
+    margin : 5px 5px;
+    background-color: black;
+    color : white;
+    border: none;
+    border-radius: 5px;
+  }
+
 }
