--- a/src/Pages/SignUp/SignUpInfo.scss
+++ b/src/Pages/SignUp/SignUpInfo.scss
@@ -1,18 +1,64 @@
 .SignUpInfo {
   display: flex;
-  justify-content: center;
-  width : 600px;
+  flex-direction: column;
+  align-items: center;
+
   form{
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
+    width : 300px;
     div{
       display: flex;
       flex-direction: column;
       margin: 5px 0;
+
+      input {
+        width : 100%;
+        height: 40px;
+        margin: 5px 0;
+      }
+
+      label{
+        font-size: 14px;
+        font-weight: bold;
+        margin-top: 10px;
+      }
+      div{
+        position: relative;
+        img{
+          display: none;
+          position: absolute;
+          top : 40px;
+          right : 0;
+          width : 22px;
+          height: 22px;
+          transition: all 1s;
+
+          &.imgShow {
+            display: inline;
+          }
+        }
+
+        .errorMsg{
+          font-size: 12px;
+          color: red;
+        }
+      }
+
+
     }
     .boundaryLine{
       margin-top: 10px;
       border-bottom: 1px solid black;
+    }
+
+    .SignUpInfoBtn{
+      background-color: black;
+      color : white;
+      border: none;
+      border-radius: 5px;
+      height: 40px;
     }
   }
 }
