--- a/src/Pages/Main/Body.scss
+++ b/src/Pages/Main/Body.scss
@@ -69,9 +69,16 @@
           justify-content: center;
           width: 100%;
           height: 42px;
-          button {
+          .whiteBtn {
             width: 250px;
             background-color: #ffffff;
+            font-size: 14px;
+            border: 1px solid #000;
+            transition-duration: 0.4s;
+          }
+          .blackBtn {
+            width: 250px;
+            background-color: #000;
             font-size: 14px;
             border: 1px solid #000;
           }
