--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -46,7 +46,8 @@
 
 .section {
   width: 100%;
-  border: 2px solid brown;
+  border: 5px solid brown;
+  margin-left: 20px;
   .header {
     display: flex;
     flex-direction: column;
@@ -76,6 +77,7 @@
   .article {
     display: flex;
     flex-direction: column;
+
     .priceBox {
       display: flex;
       // align-content: flex-end;
@@ -116,6 +118,8 @@
       display: flex;
       justify-items: center;
       align-items: flex-end;
+      position: relative;
+      top: 10px;
       width: 100%;
       height: 24px;
       .starBox {
@@ -127,6 +131,66 @@
           height: 100%;
         }
       }
+      .review {
+        position: relative;
+        font-size: 24px;
+        top: 3px;
+        left: 3px;
+      }
+    }
+
+    .shippingBox {
+      display: flex;
+      align-items: center;
+      position: relative;
+      top: 20px;
+      height: 100px;
+      border: 1px solid red;
+
+      .shippingInfo {
+        width: 20%;
+      }
+      .arriveBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        top: 10px;
+        width: 100%;
+        height: 47px;
+        // border: 1px solid brown;
+        .haruBox {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          // border: 1px solid red;
+          .arriveComment {
+            color: #1e88e5;
+            font-size: 18px;
+          }
+          .haruImg {
+            width: 74px;
+            height: 18px;
+            padding-left: 20px;
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+        .comment {
+          font-size: 18px;
+          padding-top: 5px;
+        }
+      }
+    }
+  }
+  .dropDownContainer {
+    position: relative;
+    top: 40px;
+    border: 3px solid forestgreen;
+    .dropDown1 {
+      width: 100%;
     }
   }
 }
