[신세원] 1.Footer 코드리뷰 수정

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -16,15 +16,19 @@
       padding-top: 30px;
       height: 136px;
       border-bottom: 1px solid #333333;
+
       .customerService {
         padding-left: 30px;
+
         .leftBox1 {
           font-size: 32.5px;
           font-weight: 700;
         }
+
         .leftBox2 {
           padding-top: 20px;
         }
+
         .time {
           color: #eeeeee;
           font-size: 13px;
@@ -38,9 +42,9 @@
         top: -60px;
         padding-right: 30px;
 
-        .divImgBox {
+        .snsBox {
           padding: 0 5px;
-          .divImg {
+          .snsImg {
             width: 30px;
           }
         }
