[신세원] 1.상품 디테일 페이지 레이아웃 구현완료 2.상품 디테일 페이지 상세 컴포넌트화 완료 3.각 컴포넌트별 반복 구간 map 메소드 사용완료

--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -1,310 +1,18 @@
+@mixin flexBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .DetailItem {
   .noneDetailItem {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexBox;
     width: 1300px;
     padding-top: 70px;
     margin: 0 310px 0 310px;
-    // border: 3px solid red;
     .itemBox {
       display: flex;
-
       width: 95%;
-    }
-  }
-}
-
-.aside {
-  width: 615px;
-  // border: 2px solid chartreuse;
-  .pictureBox {
-    width: 560px;
-    height: 725px;
-    // border: 3px solid green;
-    .bigPictureBox {
-      width: 100%;
-      height: 605px;
-      // border: 2px solid brown;
-      .bigPicture {
-        width: 100%;
-      }
-    }
-    .pictureListBox {
-      display: flex;
-      height: 85px;
-      // border: 2px solid black;
-      .pictureList {
-        img {
-          width: 82px;
-          height: 100%;
-          margin-right: 13.6px;
-        }
-      }
-    }
-  }
-}
-
-.section {
-  width: 100%;
-  // border: 5px solid brown;
-  margin-left: 20px;
-  .header {
-    display: flex;
-    flex-direction: column;
-    .storeBox {
-      display: flex;
-      margin-bottom: 10px;
-      .store {
-        width: 22px;
-        height: 22px;
-        img {
-          width: 100%;
-          height: 100%;
-        }
-      }
-      .storeComment {
-        display: flex;
-        align-items: center;
-        padding: 0 10px;
-        font-size: 22px;
-      }
-    }
-    .title {
-      height: 80px;
-      font-size: 28px;
-    }
-  }
-  .article {
-    display: flex;
-    flex-direction: column;
-
-    .priceBox {
-      display: flex;
-      align-items: flex-end;
-      padding-top: 20px;
-      font-size: 34px;
-      .discount {
-        display: flex;
-        align-items: center;
-        color: #ff204b;
-        padding-top: 10px;
-      }
-      .discountPrice {
-        position: relative;
-        left: 5px;
-      }
-      .discountPriceWon {
-        position: relative;
-        left: 7px;
-        bottom: 5px;
-        font-size: 20px;
-      }
-      .price {
-        position: relative;
-        left: 15px;
-        bottom: 5px;
-        font-size: 20px;
-        color: #c5c5c5;
-      }
-      .priceWon {
-        position: relative;
-        left: 17px;
-        bottom: 7px;
-        font-size: 12px;
-        color: #c5c5c5;
-      }
-    }
-    .reviewBox {
-      display: flex;
-      justify-items: center;
-      align-items: center;
-      position: relative;
-      top: 25px;
-      width: 100%;
-      height: 30px;
-      // border: 1px solid pink;
-      .starBox {
-        display: flex;
-        width: 22px;
-        height: 22px;
-
-        .star {
-          width: 100%;
-        }
-      }
-      .review {
-        padding-left: 10px;
-      }
-    }
-
-    .shippingBox {
-      display: flex;
-      align-items: center;
-      position: relative;
-      top: 20px;
-      height: 100px;
-      // border: 1px solid red;
-
-      .shippingInfo {
-        width: 20%;
-      }
-      .arriveBox {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        top: 10px;
-        width: 100%;
-        height: 47px;
-        // border: 1px solid brown;
-        .haruBox {
-          display: flex;
-          align-items: center;
-          justify-content: flex-start;
-          // border: 1px solid red;
-          .arriveComment {
-            color: #1e88e5;
-            font-size: 18px;
-          }
-          .haruImg {
-            width: 74px;
-            height: 18px;
-            padding-left: 20px;
-            img {
-              width: 100%;
-              height: 100%;
-            }
-          }
-        }
-        .comment {
-          font-size: 18px;
-          padding-top: 5px;
-        }
-      }
-    }
-  }
-  .dropDownContainer {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 40px;
-    // border: 3px solid forestgreen;
-
-    .select2,
-    .select1 {
-      height: 50px;
-      margin-top: 3px;
-    }
-    .select1 {
-      position: relative;
-      top: 5px;
-    }
-  }
-}
-
-.footer {
-  position: relative;
-  top: 50px;
-  // border: 2px solid red;
-  .orderContainer {
-    border: 1px solid #f5f6f6;
-    border-radius: 8px;
-    background-color: #f5f6f6;
-    // border: 2px solid blue;
-    .orderWrap {
-      display: flex;
-      flex-direction: column;
-      // border: 2px solid red;
-      .orderBox {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 142px;
-        .orderBox2 {
-          display: flex;
-          justify-content: space-between;
-          // border: 2px solid pink;
-          padding: 10px 15px 20px 15px;
-          .order {
-            .order1 {
-              font-size: 18px;
-              color: #1e1e1e;
-            }
-            .delivery {
-              font-size: 16px;
-              color: #868796;
-            }
-          }
-          button {
-            width: 18px;
-            height: 18px;
-            color: #000000;
-            background-color: #f5f6f6;
-            border: none;
-          }
-        }
-        .orderBottomBox {
-          display: flex;
-          justify-content: space-between;
-          padding: 0 15px;
-          // border: #1e88e5 solid 2px;
-          .orderBottom {
-            display: flex;
-            .minus,
-            .plus,
-            .number {
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              width: 30px;
-              height: 32px;
-              background-color: #ffffff;
-              border: solid 0.1px #000000;
-            }
-          }
-          .orderPriceBox {
-            display: flex;
-            align-items: flex-end;
-            // border: 1px solid pink;
-            .orderPrice1 {
-              font-size: 22px;
-            }
-            .orderPrice2 {
-              position: relative;
-              top: -5px;
-              font-size: 14px;
-            }
-          }
-        }
-      }
-      .wrapPrice {
-        display: flex;
-        align-items: flex-end;
-        width: 100%;
-        height: 60px;
-        // border: 1px solid red;
-        // background-color: black;
-        z-index: 9;
-        .priceBox {
-          display: flex;
-          justify-content: space-between;
-          align-items: flex-end;
-          padding: 0 30px;
-          width: 100%;
-          height: 44px;
-
-          // border: 1px solid green;
-          .priceComment {
-            font-size: 20px;
-          }
-          .price {
-            font-weight: 700;
-            font-size: 30px;
-            color: #ff204b;
-          }
-        }
-      }
     }
   }
 }
