--- a/src/Pages/SignUp/SignUp.scss
+++ b/src/Pages/SignUp/SignUp.scss
@@ -1,37 +1,38 @@
-.SignUp{
+.SignUp {
   display: flex;
   flex-direction: column;
   align-items: center;
-  form{
+
+  form {
     margin-top: 40px;
 
-    label{
-      input[type="checkbox"]{
-        margin : 10px 10px;
-        width : 20px;
+    label {
+      input[type="checkbox"] {
+        width: 20px;
         height: 20px;
+        margin: 10px;
       }
     }
 
-    .checkboxForm{
+    .checkboxForm {
       display: flex;
-      flex-direction: column; 
+      flex-direction: column;
     }
   }
 
-  .boundaryLine{
+  .boundaryLine {
     margin: 10px 0;
     border-bottom: 1px solid black;
   }
 
-  .SignUpInfoBtn , .cancelInfoBtn {
+  .SignUpInfoBtn,
+  .cancelInfoBtn {
     height: 40px;
     width: 45%;
-    margin : 5px 5px;
+    margin: 5px 5px;
     background-color: black;
-    color : white;
+    color: white;
     border: none;
     border-radius: 5px;
   }
-
 }
