[신세원] 1.상품 디테일 페이지 상품 구매 박스 기능 구현완료

--- a/src/Components/DetailItem/OrderBox.scss
+++ b/src/Components/DetailItem/OrderBox.scss
@@ -2,6 +2,7 @@
   border: 1px solid #f5f6f6;
   border-radius: 8px;
   background-color: #f5f6f6;
+  margin-bottom: 10px;
 
   .orderWrap {
     display: flex;
