--- a/src/Pages/ItemList/ItemCategory.scss
+++ b/src/Pages/ItemList/ItemCategory.scss
@@ -3,6 +3,14 @@
   justify-content: center;
   align-items: center;
 }
+@mixin category {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 62px;
+  border-bottom: 1px solid #bfbfbf;
+}
 
 .ItemCategory {
   display: flex;
@@ -13,15 +21,86 @@
   .nav {
     width: 212px;
     // border: 3px solid pink;
+    .navBox {
+      .mainCategory {
+        .categoryTitle {
+          font-size: 18px;
+          font-weight: 600;
+        }
+        .categoryList {
+          img {
+            padding-left: 10px;
+            width: 70px;
+            height: 18px;
+          }
+          span {
+            padding-left: 10px;
+          }
+          .categoryListSub {
+            border-bottom: 1px solid #bfbfbf;
+          }
+        }
+      }
+    }
+    .categoryBox {
+      .categoryOuterBox {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid #bfbfbf;
+        width: 100%;
+        height: 62px;
+        .arrow {
+          padding-right: 10px;
+        }
+      }
+      .categoryListBox {
+        display: flex;
+        flex-direction: column;
+
+        .list1,
+        .list2 {
+          display: flex;
+          align-items: center;
+          margin: 5px 0 0 10px;
+          width: 100%;
+          height: 40px;
+        }
+
+        .list3 {
+          border-bottom: 1px solid #bfbfbf;
+          height: 5px;
+        }
+      }
+      .categoryListMap {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        height: 62px;
+        border-bottom: 1px solid #bfbfbf;
+        .arrowBox {
+          padding-right: 10px;
+        }
+      }
+    }
 
     .categoryTitle,
     .categoryList {
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      width: 100%;
-      height: 62px;
-      border-bottom: 1px solid #bfbfbf;
+      @include category;
+    }
+    .categoryBox {
+      .category {
+        @include category;
+        margin-top: 20px;
+        font-size: 18px;
+        font-weight: 600;
+      }
     }
   }
+}
+
+.arrow {
+  width: 12px;
+  height: 12px;
 }
