--- a/src/Pages/ItemList/ItemList.scss
+++ b/src/Pages/ItemList/ItemList.scss
@@ -1,5 +1,30 @@
-.none {
-  width: 1300px;
-  margin: 0 246px 0 246px;
-  border: 3px solid red;
+.ItemList {
+  .blankSpaceBox {
+    display: flex;
+    align-content: center;
+    width: 1300px;
+    height: 50px;
+    margin: 0 246px 0 246px;
+
+    .navComment {
+      display: flex;
+      align-content: center;
+      .commentBox {
+        display: flex;
+        align-items: center;
+        position: relative;
+        left: 20px;
+        .comment {
+          font-size: 14px;
+          color: #b2b2b2;
+        }
+      }
+    }
+  }
+
+  .none {
+    width: 1300px;
+    margin: 0 246px 0 246px;
+    // border: 3px solid red;
+  }
 }
