브랜치 이동을 위한 커밋

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -5,9 +5,9 @@
     width: 100%;
   }
 
-  .none{
+  .none {
     width: 1300px;
-    margin:0 246px 0 246px;
+    margin: 0 246px 0 246px;
   }
 
   .NavBottom {
@@ -16,13 +16,11 @@
     justify-content: space-around;
     align-items: center;
 
-    .logoBox{
-
+    .logoBox {
       .logoImg {
         width: 150px;
         height: 25.25px;
-      } 
-
+      }
     }
 
     .navList {
@@ -34,7 +32,6 @@
         border-right: 1px solid black;
         font-size: 14px;
       }
-
     }
 
     .textField {
@@ -44,32 +41,31 @@
       border-bottom: none;
     }
 
-    form{
+    form {
       display: flex;
       align-items: center;
       width: 504px;
       height: 40px;
 
-      input{
+      input {
         width: 100%;
         height: 100%;
-        border:#eeeeee;
+        border: #eeeeee;
         border-radius: 15px;
-        background-color:#eeeeee ;
+        background-color: #eeeeee;
       }
 
-      .magnifierBox{
+      .magnifierBox {
         position: relative;
 
-        .magnifier{
+        .magnifier {
           position: absolute;
           right: 470px;
-          top:-10px;
+          top: -10px;
           width: 24px;
           height: 24px;
-          background-color:#eeeeee
-          }
-
+          background-color: #eeeeee;
+        }
       }
     }
   }
@@ -77,13 +73,13 @@
   .navBottomList {
     display: flex;
     height: 62px;
-    border-top::1px solid #dddddd;
-    border-bottom::1px solid #dddddd;
+    border-top: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
 
-    .none1{
+    .none1 {
       display: flex;
       width: 1300px;
-      margin:0 246px 0 246px;
+      margin: 0 246px 0 246px;
       justify-content: space-between;
     }
 
@@ -92,13 +88,11 @@
       align-items: center;
       justify-content: center;
       padding: 0 10px;
-      width:137px;
+      width: 137px;
       height: 100%;
       float: left;
       font-size: 16px;
       font-weight: 700;
     }
-    
   }
-  
 }
