--- a/src/Pages/Main/ItemList.scss
+++ b/src/Pages/Main/ItemList.scss
@@ -23,10 +23,12 @@
         article {
           width: 243px;
           height: 360px;
+          border: 1px solid red;
           .itemBox {
             display: flex;
             flex-direction: column;
             margin: 0 10px 0 10px;
+            border: 2px solid brown;
             .itemImgBox {
               width: 100%;
               .itemImg {
@@ -53,13 +55,19 @@
             }
             .priceBox {
               display: flex;
-              align-items: center;
+              border: 1px solid pink;
               .discount {
-                width: 47px;
+                display: flex;
+                align-items: flex-end;
+                justify-content: flex-start;
+                width: 40px;
                 font-size: 20px;
+                color: #ff204b;
+                border: 2px solid green;
               }
               .price {
                 font-size: 20px;
+                font-weight: 600;
               }
             }
           }
