--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -42,21 +42,29 @@
       }
       .rightBox {
         display: flex;
-        position: relative;
-        align-items: center;
-        top: -60px;
+        align-items: flex-start;
+        // justify-content: flex-start;
         padding-right: 30px;
         background-color: #1e1e1e;
-
-        .snsBox {
-          padding: 0 5px;
-          background-color: #1e1e1e;
-          .snsImg {
-            width: 30px;
+        .snsContainer {
+          display: flex;
+          .snsBox {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 5px;
             background-color: #1e1e1e;
+            .snsImg {
+              width: 30px;
+              background-color: #1e1e1e;
+            }
           }
         }
+
         .snsComent {
+          display: flex;
+          align-items: center;
+          justify-content: center;
           background-color: #1e1e1e;
         }
       }
