--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -6,21 +6,22 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 5px 0;
+  margin: 50px 0;
 
   div {
-    max-width: 400px;
+    width: 100%;
+    max-width: 500px;
     margin: 20px 0;
     h1 {
       text-align: center;
-      margin: 5px 0;
+      margin: 6px 0;
       color: #ff204b;
       font-size: 23px;
       font-weight: bold;
     }
     h2 {
       text-align: center;
-      margin: 5px 0;
+      margin: 8px 0;
       font-size: 25px;
       font-weight: lighter;
     }
@@ -33,13 +34,14 @@
       }
 
       .inputTextbox {
-        height: 35px;
-        margin: 3px 0;
+        height: 40px;
+        margin: 5px 0;
+        border-radius: 3px;
         border: 1px solid #e1e1e1;
       }
 
       .LoginBtn {
-        height: 35px;
+        height: 50px;
         margin: 4px 0;
         background-color: black;
         color: white;
@@ -49,7 +51,7 @@
       }
 
       .SignUpBtn {
-        height: 35px;
+        height: 50px;
         background-color: white;
         color: black;
         border: 1px solid black;
