--- a/src/Pages/ItemList/ItemList.scss
+++ b/src/Pages/ItemList/ItemList.scss
@@ -1,4 +1,7 @@
 .ItemList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .blankSpaceBox {
     display: flex;
     align-content: center;
@@ -22,9 +25,8 @@
     }
   }
 
-  .none {
+  .noneItemList {
     width: 1300px;
     margin: 0 246px 0 246px;
-    // border: 3px solid red;
   }
 }
