--- a/src/Components/Nav/ShoppingNav.scss
+++ b/src/Components/Nav/ShoppingNav.scss
@@ -12,7 +12,7 @@
     width: 1300px;
     margin: 0 246px 0 246px;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.9);
 
     .shoppingContainer {
       display: flex;
@@ -21,7 +21,7 @@
       align-items: flex-start;
       width: 10%;
       padding-left: 20px;
-      border-left: 0.5px solid #eeeeee;
+      // border-left: 0.5px solid #eeeeee;
       background-color: rgba(255, 255, 255, 0.1);
 
       .mainTitle {
