update : 디테일 리뷰 탭 ui 구현 및 api 연동 준비 완료

--- a/src/Components/DetailItem/ReviewListComponet.scss
+++ b/src/Components/DetailItem/ReviewListComponet.scss
@@ -36,24 +36,20 @@
     }
   }
 
-  .pageNaiton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    ul {
-      li {
-        span {
-          font-size: 15px;
-          color: #9a9a9e;
-          &.selectPage {
-            color: black;
-          }
+  .pagination {
+    li {
+      &.disabled {
+        display: none;
+      }
+      &.active {
+        a {
+          color: black;
         }
       }
-    }
-    div {
-      span {
-        margin: 0 10px;
+      a {
+        color: #9a9a9e;
+        font-weight: bold;
+        text-decoration: none;
       }
     }
   }
