--- a/src/Components/DetailItem/Review.scss
+++ b/src/Components/DetailItem/Review.scss
@@ -13,70 +13,28 @@
     header {
       display: flex;
       justify-content: space-between;
-      div {
+
+      .writeForm {
         display: flex;
         align-items: center;
 
-        ////////////////////여기
-
-        .modal {
-          display: none; /* Hidden by default */
-          position: fixed; /* Stay in place */
-          z-index: 1; /* Sit on top */
-          padding-top: 100px; /* Location of the box */
-          left: 0;
-          top: 0;
-          width: 100%; /* Full width */
-          height: 100%; /* Full height */
-          overflow: auto; /* Enable scroll if needed */
-          background-color: rgb(0, 0, 0); /* Fallback color */
-          background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-
-          &.activeModal {
-            display: block;
-          }
-
-          .modal-content {
-            background-color: #fefefe;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-          }
-        }
-
-        // /* Modal Content */
-
-        // /* The Close Button */
-        // .close {
-        //   color: #aaaaaa;
-        //   float: right;
-        //   font-size: 28px;
-        //   font-weight: bold;
-        // }
-
-        // .close:hover,
-        // .close:focus {
-        //   color: #000;
-        //   text-decoration: none;
-        //   cursor: pointer;
-        // }
-
-        ///////////////////////여기
         h1 {
           font-size: 20px;
           font-weight: bold;
         }
-        input {
+
+        .writeBtnReview {
           margin: 0 20px;
           width: 70px;
           height: 35px;
           border: none;
           border-radius: 4px;
+          border-color: none;
           background-color: black;
           color: white;
         }
       }
+
       div {
         span {
           margin: 0 5px 0 30px;
@@ -100,6 +58,7 @@
       ul {
         display: flex;
         justify-content: center;
+
         li {
           display: flex;
           justify-content: center;
