--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -59,6 +59,7 @@
             width: 100%;
             height: 100%;
             border:#eeeeee;
+            border:none;
             border-radius: 15px;
             background-color:#eeeeee ;
           }
