--- a/src/Pages/CategoriePage/CategoriePage.scss
+++ b/src/Pages/CategoriePage/CategoriePage.scss
@@ -1,7 +1,9 @@
-.ItemList {
+.SideItemList {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+
   .blankSpaceBox {
     display: flex;
     align-content: center;
@@ -25,8 +27,8 @@
     }
   }
 
-  .noneItemList {
+  .ItemList {
+    display: flex;
     width: 1300px;
-    margin: 0 246px 0 246px;
   }
 }
