update : 기능 업데이트 및 임시 테스트

--- a/src/Components/DetailItem/ReviewListComponet.scss
+++ b/src/Components/DetailItem/ReviewListComponet.scss
@@ -11,6 +11,9 @@
           font-size: 13px;
           font-weight: 500;
         }
+        input {
+          border: none;
+        }
       }
 
       .writeDate {
