--- a/src/Pages/Main/ItemList.scss
+++ b/src/Pages/Main/ItemList.scss
@@ -1,7 +1,12 @@
 .ItemList {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   .noneBody {
     width: 1300px;
     margin: 0 310px 0 310px;
+
     .bodyContainer {
       width: 1240px;
       display: flex;
@@ -9,6 +14,7 @@
       justify-content: center;
       align-items: center;
       margin: 0 30px;
+
       .comment {
         display: flex;
         justify-content: center;
@@ -17,20 +23,23 @@
         height: 38px;
         font-size: 26px;
       }
+
       .Box {
         display: flex;
         flex-wrap: wrap;
+
         article {
           width: 243px;
           height: 360px;
-          // border: 1px solid red;
+
           .itemBox {
             display: flex;
             flex-direction: column;
             margin: 0 10px 0 10px;
-            // border: 2px solid brown;
+
             .itemImgBox {
               width: 100%;
+
               .itemImg {
                 width: 100%;
                 height: 254px;
@@ -41,6 +50,7 @@
               display: flex;
               align-items: center;
               justify-content: space-between;
+
               .haru {
                 .haruPicture {
                   width: 50px;
@@ -57,7 +67,7 @@
             }
             .priceBox {
               display: flex;
-              // border: 1px solid pink;
+
               .discount {
                 display: flex;
                 align-items: flex-end;
@@ -65,8 +75,8 @@
                 width: 40px;
                 font-size: 20px;
                 color: #ff204b;
-                // border: 2px solid green;
               }
+
               .price {
                 display: flex;
                 align-items: flex-end;
@@ -81,6 +91,7 @@
           justify-content: center;
           width: 100%;
           height: 42px;
+
           .whiteBtn {
             width: 250px;
             background-color: #ffffff;
@@ -88,6 +99,7 @@
             border: 1px solid #000;
             transition-duration: 0.4s;
           }
+
           .blackBtn {
             width: 250px;
             background-color: #000;
