코드리뷰 반영 완료

--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -5,11 +5,15 @@
 }
 
 .DetailItem {
+  display: flex;
+  justify-content: center;
+
   .noneDetailItem {
     @include flexBox;
     width: 1300px;
     padding-top: 70px;
     margin: 0 310px 0 310px;
+
     .itemBox {
       display: flex;
       width: 95%;
