--- a/src/Components/DetailItem/OrderBox.scss
+++ b/src/Components/DetailItem/OrderBox.scss
@@ -13,34 +13,40 @@
       flex-direction: column;
       width: 100%;
       height: 142px;
+      background-color: #f5f6f6;
+
       .orderBox2 {
         display: flex;
         justify-content: space-between;
         padding: 10px 15px 10px 15px;
+        background-color: #f5f6f6;
 
         .order {
-          padding: 5px 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+          align-content: flex-start;
+          background-color: #f5f6f6;
 
           .order1 {
             font-size: 18px;
             padding: 10px 0;
             color: #1e1e1e;
-          }
-          .order2 {
-            font-size: 5px;
-            padding: 10px 0;
-            color: #1e1e1e;
+            background-color: #f5f6f6;
           }
 
           .delivery {
             font-size: 16px;
             color: #868796;
+            background-color: #f5f6f6;
           }
         }
         .buttonBox {
           padding-top: 10px;
           width: 18px;
           height: 18px;
+          background-color: #f5f6f6;
 
           button {
             width: 100%;
@@ -48,17 +54,27 @@
             color: #000000;
             background-color: #f5f6f6;
             border: none;
+
+            .close {
+              width: 14px;
+              height: 14px;
+              background-color: #f5f6f6;
+              color: #c4c5c4;
+            }
           }
         }
       }
+
       .orderBottomBox {
         display: flex;
         justify-content: space-between;
         padding: 0 15px;
+        background-color: #f5f6f6;
 
         .orderBottom {
           display: flex;
           border: solid 1px #ebeef2;
+          background-color: #f5f6f6;
 
           .minus,
           .plus {
@@ -68,8 +84,8 @@
             font-size: 16px;
             width: 30px;
             height: 30px;
-            background-color: #ffffff;
             border: none;
+            background-color: #ffffff;
           }
 
           .number {
@@ -87,9 +103,11 @@
         .orderPriceBox {
           display: flex;
           align-items: center;
+          background-color: #f5f6f6;
 
           .orderPrice1 {
             font-size: 22px;
+            background-color: #f5f6f6;
           }
 
           .orderPrice2 {
