--- a/src/Pages/CategoriePage/ShirtList.scss
+++ b/src/Pages/CategoriePage/ShirtList.scss
@@ -6,26 +6,34 @@
     justify-content: center;
     align-items: center;
     margin-left: 30px;
-    .comment {
+
+    .dropDownBox {
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
       align-items: center;
       width: 100%;
       height: 38px;
-      font-size: 26px;
+      margin-right: 80px;
+
+      select {
+        width: 130px;
+        height: 30px;
+        padding-left: 10px;
+      }
     }
+
     .Box {
       display: flex;
       flex-wrap: wrap;
       article {
         width: 243px;
         height: 360px;
-        // border: 1px solid red;
+
         .itemBox {
           display: flex;
           flex-direction: column;
           margin: 0 10px 0 10px;
-          // border: 2px solid brown;
+
           .itemImgBox {
             width: 100%;
             .itemImg {
@@ -33,11 +41,13 @@
               height: 254px;
             }
           }
+
           .sellerBox {
             width: 100%;
             display: flex;
             align-items: center;
             justify-content: space-between;
+
             .haru {
               .haruPicture {
                 width: 50px;
@@ -46,15 +56,17 @@
               }
             }
           }
+
           .itemName {
             display: flex;
             justify-content: flex-start;
             align-items: center;
             height: 40px;
           }
+
           .priceBox {
             display: flex;
-            // border: 1px solid pink;
+
             .discount {
               display: flex;
               align-items: flex-end;
@@ -62,8 +74,8 @@
               width: 40px;
               font-size: 20px;
               color: #ff204b;
-              // border: 2px solid green;
             }
+
             .price {
               display: flex;
               align-items: flex-end;
@@ -73,6 +85,7 @@
           }
         }
       }
+
       .buttonBox {
         display: flex;
         justify-content: center;
@@ -85,11 +98,12 @@
           border: 1px solid #000;
           transition-duration: 0.4s;
         }
+
         .blackBtn {
           width: 250px;
-          background-color: #000;
           font-size: 14px;
           border: 1px solid #000;
+          background-color: #000;
         }
       }
     }
