--- a/src/Pages/MyCart/MyCart.scss
+++ b/src/Pages/MyCart/MyCart.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  margin: 20px 0;
 
   form {
     display: flex;
@@ -22,7 +23,8 @@
       align-items: center;
       width: 100%;
       padding: 10px;
-      border: 1px solid black;
+      border-top: 1px solid black;
+      border-bottom: 1px solid black;
 
       .allDelete {
         padding: 8px;
@@ -31,18 +33,60 @@
       }
     }
 
-    .productsKind {
-      width: 100%;
-      .layoutLine {
-        border-top: #e1e1e1;
+    .productsList {
+      .deliveryKind {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        img {
+          width: 40px;
+          height: 40px;
+          margin-right: 10px;
+        }
+
+        .haruDelivery {
+          color: #36b5e7;
+        }
       }
     }
+  }
+  .AmountForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
 
-    .kindHaru {
-      margin: 30px 0;
-      padding: 10px 0;
+    .formTitle {
+      width: 100%;
+      padding: 10px;
+    }
+    .EstimatedAmount {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      padding: 30px 10px;
       border-top: 1px solid black;
       border-bottom: 1px solid black;
+      font-size: 20px;
+      font-weight: bold;
+
+      label {
+        .orderPrice {
+          color: red;
+        }
+      }
+    }
+    input {
+      width: 250px;
+      height: 50px;
+      margin-top: 30px;
+      border: none;
+      color: white;
+      font-size: 18px;
+      text-align: center;
+      border-radius: 5px;
+      background-color: black;
     }
   }
 }
