--- a/src/Pages/MyCart/SellerProduct.scss
+++ b/src/Pages/MyCart/SellerProduct.scss
@@ -3,32 +3,100 @@
   flex-direction: column;
   align-items: center;
 
-  border: 1px solid red;
-
   table {
     thead {
-      border: 1px solid black;
+      border-top: 2px solid#e1e1e1;
       tr {
         height: 30px;
+        height: 50px;
         td {
           vertical-align: middle;
+        }
+        .sellerName {
+          padding-left: 10px;
+          font-size: 15px;
+          font-weight: bold;
+        }
+        .quantity {
+          font-size: 13px;
+          text-align: center;
+        }
+        .price {
+          font-size: 13px;
+          text-align: center;
         }
       }
     }
     tbody {
       tr {
+        padding: 0 10px;
+        border-top: 2px solid#e1e1e1;
         td {
           img {
             width: 95px;
             height: 95px;
             padding: 10px;
           }
+          .productDetail {
+            margin-left: 10px;
+            .productTitle {
+              margin-bottom: 0 0 0 5px;
+              font-size: 14px;
+            }
+            .productOption {
+              color: #9e9e9e;
+              font-size: 12px;
+            }
+          }
         }
+        .quantityBtnForm {
+          text-align: center;
+          input {
+            width: 25px;
+            text-align: center;
+            border: 1px solid #dddddd;
+            outline: none;
+            cursor: pointer;
+          }
+        }
+
+        .orderFomr {
+          text-align: center;
+          vertical-align: middle;
+
+          .productPrice {
+            font-size: 13px;
+            font-weight: bold;
+            margin: 5px 0;
+          }
+          .orderButton {
+            height: 25px;
+            width: 100px;
+            border: none;
+            background-color: black;
+            vertical-align: middle;
+            font-size: 11px;
+            color: white;
+          }
+        }
+
         .flexAlign {
           display: flex;
           align-items: center;
+          padding-left: 10px;
         }
       }
     }
+  }
+  .addHaruDelivery {
+    width: 250px;
+    height: 50px;
+    margin-top: 30px;
+    border: none;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: black;
   }
 }
