--- a/src/Pages/SignUp/Complete.scss
+++ b/src/Pages/SignUp/Complete.scss
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 30px 0;
+  margin: 50px 0;
 
   .coverform {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 400px;
+    margin: 30px;
+    padding: 50px;
 
     h1 {
       margin: 20px 0;
@@ -37,6 +39,7 @@
       text-align: center;
       font-size: 20px;
       color: white;
+      cursor: pointer;
     }
   }
 }
