--- a/src/Pages/CategoryPage/ShirtList.scss
+++ b/src/Pages/CategoryPage/ShirtList.scss
@@ -7,18 +7,52 @@
     align-items: center;
     margin-left: 30px;
 
-    .dropDownBox {
+    .dropDownContainer {
       display: flex;
       justify-content: flex-end;
-      align-items: center;
       width: 100%;
-      height: 38px;
-      margin-right: 80px;
+      border: 3px solid black;
 
-      select {
-        width: 130px;
-        height: 30px;
-        padding-left: 10px;
+      .dropDownBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 150px;
+        height: 100%;
+        border: 3px solid violet;
+
+        .dropDown {
+          display: flex;
+          // align-content: center;
+          align-items: center;
+          justify-content: center;
+          border: 2px solid green;
+
+          .dropDownElement {
+            display: flex;
+            align-items: center;
+            border: 1px solid red;
+            width: 100px;
+            height: 30px;
+          }
+          .dropImgBox {
+            width: 20px;
+            height: 30px;
+            .dropImg {
+              width: 20px;
+              height: 20px;
+            }
+          }
+        }
+
+        .dropDownElement2 {
+          display: flex;
+          align-items: center;
+          border: 1px solid red;
+          width: 100px;
+          height: 30px;
+        }
       }
     }
 
