--- a/src/Pages/CategoryPage/ShirtList.scss
+++ b/src/Pages/CategoryPage/ShirtList.scss
@@ -9,39 +9,49 @@
 
     .dropDownContainer {
       display: flex;
-      justify-content: flex-end;
-      width: 100%;
-      border: 3px solid black;
+      position: relative;
+      align-items: flex-end;
+      width: 80%;
 
       .dropDownBox {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: flex-end;
         align-items: flex-start;
+        position: absolute;
+        top: 70px;
         width: 150px;
         height: 100%;
-        border: 3px solid violet;
+        z-index: 3;
 
         .dropDown {
           display: flex;
-          // align-content: center;
           align-items: center;
           justify-content: center;
-          border: 2px solid green;
 
-          .dropDownElement {
+          .downBox {
             display: flex;
+            position: relative;
             align-items: center;
-            border: 1px solid red;
-            width: 100px;
-            height: 30px;
-          }
-          .dropImgBox {
-            width: 20px;
-            height: 30px;
-            .dropImg {
-              width: 20px;
-              height: 20px;
+
+            .dropDownElement {
+              display: flex;
+              align-items: center;
+              border: 1px solid #e1e1e1;
+              width: 130px;
+              height: 30px;
+              padding-left: 5px;
+            }
+            .dropImgBox {
+              position: absolute;
+              right: 10px;
+              width: 18px;
+              height: 18px;
+
+              .dropImg {
+                width: 16px;
+                height: 16px;
+              }
             }
           }
         }
@@ -49,9 +59,10 @@
         .dropDownElement2 {
           display: flex;
           align-items: center;
-          border: 1px solid red;
-          width: 100px;
+          border: 1px solid #e1e1e1;
+          width: 130px;
           height: 30px;
+          padding-left: 5px;
         }
       }
     }
@@ -66,7 +77,7 @@
         .itemBox {
           display: flex;
           flex-direction: column;
-          margin: 0 10px 0 10px;
+          margin: 0 10px;
 
           .itemImgBox {
             width: 100%;
