--- a/src/common.scss
+++ b/src/common.scss
@@ -14,7 +14,7 @@
   width: 100%;
   height: 62px;
   border-bottom: 1px solid #bfbfbf;
-
+}
 @mixin flexBox {
   display: flex;
   align-items: center;
