--- a/src/Components/Nav/ShoppingNav.scss
+++ b/src/Components/Nav/ShoppingNav.scss
@@ -3,14 +3,14 @@
   justify-content: center;
   width: 100%;
   position: absolute;
-  top: 100%;
+  top: 99%;
   background-color: rgba(255, 255, 255, 0.1);
   z-index: 3;
 
   .noneBox1 {
     display: flex;
-    width: 1300px;
-    margin: 0 246px 0 246px;
+    width: 900px;
+    margin: 0 246px;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.9);
 
@@ -19,9 +19,8 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      width: 10%;
+      width: 15%;
       padding-left: 20px;
-      // border-left: 0.5px solid #eeeeee;
       background-color: rgba(255, 255, 255, 0.1);
 
       .mainTitle {
