뭔가 문제있음

--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -17,6 +17,10 @@
     .itemBox {
       display: flex;
       width: 95%;
+
+      .componentWrap {
+        display: flex;
+      }
     }
   }
 }
