--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -10,16 +10,40 @@
 
   .noneDetailItem {
     @include flexBox;
+    flex-direction: column;
     width: 1300px;
     padding-top: 70px;
     margin: 0 310px;
 
     .itemBox {
       display: flex;
+      flex-direction: column;
       width: 95%;
 
       .componentWrap {
         display: flex;
+      }
+      // .infoBox {
+      //   display: flex;
+      //   flex-direction: column;
+      // }
+    }
+    .nioBox {
+      display: flex;
+      flex-direction: column;
+      border: 2px solid blue;
+
+      .nio {
+        height: 400px;
+        border: 2px solid red;
+      }
+      .nio1 {
+        height: 400px;
+        border: 2px solid red;
+      }
+      .nio2 {
+        height: 400px;
+        border: 2px solid red;
       }
     }
   }
