--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -7,13 +7,12 @@
 .DetailItem {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 
   .noneDetailItem {
     @include flexBox;
     width: 1300px;
     padding-top: 70px;
-    margin: 0 310px;
 
     .itemBox {
       display: flex;
