update : login 연동 테스트

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -30,6 +30,7 @@
         .logoImg {
           width: 150px;
           height: 25.25px;
+          cursor: pointer;
         }
       }
 
@@ -41,6 +42,7 @@
           float: left;
           border-right: 1px solid black;
           font-size: 14px;
+          cursor: pointer;
         }
       }
 
@@ -105,13 +107,17 @@
     height: 62px;
     border-top: 1px solid #dddddd;
     border-bottom: 1px solid #dddddd;
+    margin: 0px;
+    padding: 0px;
 
     .none1 {
       display: flex;
       width: 1300px;
-      margin: 0 246px 0 246px;
+      height: 100%;
+      padding: 0px;
+      margin: 0 246px;
       justify-content: space-between;
-      width: 1300px;
+      // border: 2px solid red;
     }
 
     .navListLi {
