--- a/src/Components/ItemInfomationBar/ItemInfo.scss
+++ b/src/Components/ItemInfomationBar/ItemInfo.scss
@@ -1,4 +1,22 @@
 .ItemInfo {
   display: flex;
   justify-content: center;
+
+  .container {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    border: 2px solid red;
+    margin-top: 100px;
+    .imgContainer {
+      width: 100%;
+      img {
+        width: 100%;
+      }
+    }
+    .commentBox {
+      border: 2px solid blue;
+    }
+  }
 }
