--- a/src/Components/DetailItem/WriteReview.scss
+++ b/src/Components/DetailItem/WriteReview.scss
@@ -62,7 +62,7 @@
                   pad: 100px;
 
                   label {
-                    input[type="radio"] {
+                    input[type='radio'] {
                       display: none;
                     }
                   }
