--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -110,6 +110,7 @@
       display: flex;
       justify-content: space-between;
       width: 1300px;
+      height: 100%;
     }
 
     .navListLi {
