--- a/src/Pages/MyCart/SellerProduct.scss
+++ b/src/Pages/MyCart/SellerProduct.scss
@@ -4,6 +4,8 @@
   align-items: center;
 
   table {
+    margin-bottom: 10px;
+    border-bottom: 2px solid black;
     thead {
       border-top: 2px solid#e1e1e1;
       tr {
@@ -39,11 +41,25 @@
           }
           .productDetail {
             margin-left: 10px;
-            .productTitle {
-              margin-bottom: 0 0 0 5px;
-              font-size: 14px;
+            align-items: center;
+            justify-content: center;
+
+            div {
+              display: flex;
+              align-items: center;
+              .productTitle {
+                margin-bottom: 0 0 0 5px;
+                vertical-align: middle;
+                font-size: 14px;
+              }
+              .trashIcon {
+                width: 40px;
+                height: 40px;
+              }
             }
             .productOption {
+              position: relative;
+              top: -25px;
               color: #9e9e9e;
               font-size: 12px;
             }
