--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -17,7 +17,13 @@
     .itemBox {
       display: flex;
       flex-direction: column;
-      width: 95%;
+      width: 100%;
+
+      .test2 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+      }
 
       .componentWrap {
         display: flex;
@@ -25,6 +31,10 @@
       }
       .nio {
         height: 1000px;
+      }
+
+      .reviewBox2 {
+        height: 100px;
       }
     }
   }
