--- a/src/Components/DetailItem/Review.scss
+++ b/src/Components/DetailItem/Review.scss
@@ -2,16 +2,17 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  padding: 100px 0;
 
   .ReviewList {
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 600px;
     padding: 20px;
 
     header {
       display: flex;
+      width: 100%;
       justify-content: space-between;
 
       .writeForm {
