전체 부분 수정중

--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -137,8 +137,9 @@
           }
         }
 
-        .explanation {
+        .explanation2 {
           background-color: #3b659f;
+          color: #ffffff;
         }
       }
 
