--- a/src/Components/DetailItem/DetailItem.scss
+++ b/src/Components/DetailItem/DetailItem.scss
@@ -22,7 +22,10 @@
 
       .test2 {
         width: 100%;
+        height: 100%;
         display: flex;
+        position: relative;
+        top: 100px;
         flex-direction: column;
       }
 
